# 4enLinea_IE0217_Proyecto

./: README.md  makefile  tablerofour.cpp
Bitacora/: bitacora.tex  makefile
CodigosIsai/: IA  IA.cpp  Pruebasiniciales.cpp  SL  SaveLoad.cpp  isai2
CodigosIsai/jueguito/Protecto4EnLinea/: CMakeLists.txt  main.cpp
PruebaJunior/: makefile  matrix.cpp
pruebasRocha/: bot.cpp  bot.hpp  botIA.cpp  matrix.cpp  pruebas.cpp  pruebas2.cpp  pruebas3.cpp
pruebasRocha/jueguito_prueba/: CMakeLists.txt  main.cpp  pruebamainwindow.cpp  pruebamainwindow.h  pruebamainwindow.ui
src/: Matrix6x7.cpp  Matrix6x7.hpp  SaveLoad.cpp  SaveLoad.hpp  bot.cpp  bot.hpp  gui4connect.cpp  gui4connect.hpp  main.cpp  makefile  movimientos.txt
